k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redeemer-recovery
  labels:
    name: redeemer-recovery
